[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap", "once"]
license-file = "LICENSE"
name = "ach-array"
readme = "./README.md"
repository = "https://github.com/rise0chen/ach.git"
version = "0.1.5"

[dependencies]
ach-cell = {version = "0.1", path = "../ach-cell"}

[dev-dependencies]
on_drop = "0.1"
