[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "ach-linked"
readme = "./README.md"
repository = "https://github.com/rise0chen/ach.git"
version = "0.1.0"

[dependencies]
ach-cell = {version = "0.1", path = "../ach-cell"}
util = {package = "ach-util", version = "0.1", path = "../ach-util"}

[dev-dependencies]
on_drop = "0.1"
