[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap", "once"]
license-file = "LICENSE"
name = "ach-pool"
readme = "./README.md"
repository = "https://github.com/rise0chen/ach.git"
version = "0.1.1"

[dependencies]
ach-option = {version = "0.1", path = "../ach-option"}

[dev-dependencies]
on_drop = "0.1"
