[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap", "once"]
license-file = "LICENSE"
name = "ach-ring"
readme = "./README.md"
repository = "https://github.com/rise0chen/ach.git"
version = "0.1.9"

[dependencies]
util = {package = "ach-util", version = "0.1", path = "../ach-util"}

[target.'cfg(target_os = "none")'.dependencies]
interrupt = "0.1"

[dev-dependencies]
criterion = "0.3"
crossbeam-queue = "0.3.4"
crossbeam-utils = "0.8.7"
flume = "0.10.11"
on_drop = "0.1"

[[bench]]
harness = false
name = "basic"
