[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap", "once"]
license-file = "LICENSE"
name = "ach-spsc"
readme = "./README.md"
repository = "https://github.com/rise0chen/ach.git"
version = "0.1.2"

[dependencies]

[dev-dependencies]
on_drop = "0.1"
