[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "ach-util"
readme = "./README.md"
repository = "https://github.com/rise0chen/ach.git"
version = "0.1.9"

[dependencies]
atomic = {version = "0.5", default-features = false}
