[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["concurrency"]
description = "Atomic Channel"
edition = "2018"
keywords = ["atomic", "channel", "no-heap"]
license-file = "LICENSE"
name = "ach"
readme = "./README.md"
repository = "https://github.com/rise0chen/ach.git"
version = "0.2.0"

[features]
alloc = ["ach-mpmc/alloc", "ach-spsc/alloc"]
default = []

[dependencies]
ach-array = {version = "0.1"}
ach-cell = {version = "0.1"}
ach-lazy = {version = "0.1"}
ach-mpmc = {version = "0.2"}
ach-once = {version = "0.1"}
ach-option = {version = "0.1"}
ach-pool = {version = "0.1"}
ach-pubsub = {version = "0.1"}
ach-ring = {version = "0.1"}
ach-spsc = {version = "0.2"}
ach-util = {version = "0.1"}
